Bug Reviewer: Lynn Christensen Comment: improving What's New menu icon and search input field alignment.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -1439,7 +1439,7 @@ body, table td, select
 }
 .mainMenuSearch_Input
 {
-	font-size: 10px;
+	font-size: 9px;
 	padding: 1px 0;
 	vertical-align: top;
 	width: 150px;
